Adding icon in buy now Button and link refine search image to Filter page

--- a/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
+++ b/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
@@ -8362,3 +8362,6 @@ footer{ margin-top: 25px; }
 .img-thumbnail.text-center a {
     font-weight: 600;
 }
+.row.category_thumb .col-sm-2.category_img{
+	display:none
+}
