--- a/system/storage/modification/catalog/view/theme/Demo-Store/template/product/product.twig
+++ b/system/storage/modification/catalog/view/theme/Demo-Store/template/product/product.twig
@@ -284,7 +284,7 @@
             <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-515eeaf54693130e"></script> 
             <!-- AddThis Button END --> 
            
-            <div class="content_product_block">{{ productblock }}</div>
+            <div class="content_product_block d-none">{{ productblock }}</div>
            
       </div>
      
