--- a/catalog/view/theme/Demo-Store/template/common/footer.twig
+++ b/catalog/view/theme/Demo-Store/template/common/footer.twig
@@ -1,12 +1,13 @@
 <footer>
-	<div class="footer-top">
+  <hr class="footer-line">
+	<div class="footer-top d-none">
 		<div class="container">
 			<div class="row">
 		{{ footertop }}
 	</div>
 	</div>
 </div>
-<div class="footer-middle">
+<div class="footer-middle d-none">
 		<div class="container">
 			<div class="row">
 		{{ footermiddle }}
