--- a/admin/view/stylesheet/stylesheet.css
+++ b/admin/view/stylesheet/stylesheet.css
@@ -960,3 +960,7 @@ input[type="checkbox"]:checked::after, .checkbox input[type="checkbox"]:checked:
 .opencart-icon-cart-mini:before {
     content: "\e91c";
 }
+#header .navbar-brand {
+    float: left;
+    padding: 8px 15px;
+}
