--- a/catalog/view/theme/Demo-Store/template/information/contact.twig
+++ b/catalog/view/theme/Demo-Store/template/information/contact.twig
@@ -76,7 +76,7 @@
               {{ address }} 
               </address>
                {% if geocode %}
-              <a href="https://maps.google.com/maps?q={{ geocode|url_encode }} &hl={{ geocode_hl }} &t=m&z=15" target="_blank" class="btn btn-info"><i class="fa fa-map-marker"></i> {{ button_map }} </a>
+              <a href="https://www.google.com/maps/place/V.m.+Mobiles/@11.0491974,76.9448492,17z/data=!3m1!4b1!4m5!3m4!1s0x3ba858997e351c7b:0x12c52068e3a10844!8m2!3d11.0491921!4d76.9470379" target="_blank" class="btn btn-info"><i class="fa fa-map-marker"></i> {{ button_map }} </a>
               {% endif %}
             </div>
             <div class="telephone"><div class="image"></div>
@@ -149,7 +149,7 @@
 
 
     </div>
-    <div class="panel panel-default">
+    <div class="panel panel-default d-none">
         <div class="panel-body">
           <div class="row contact-info">
     
