--- a/system/storage/modification/catalog/view/theme/Demo-Store/template/product/product.twig
+++ b/system/storage/modification/catalog/view/theme/Demo-Store/template/product/product.twig
@@ -75,7 +75,6 @@
         <div class="{{ class }}">
           
           <div class="product-detail-left">
-          <div class="">
           <h3 class="product-title">{{ heading_title }}</h3>
            {% if review_status %}
           <div class="rating-wrapper">
@@ -282,54 +281,12 @@
            <hr>
        <!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style" data-url="{{ share }}"><a class="addthis_button_facebook_like" fb:like:layout="button_count"></a> <a class="addthis_button_tweet"></a> <a class="addthis_button_pinterest_pinit"></a> <a class="addthis_counter addthis_pill_style"></a></div>
-       </div>
-       <div class="">
-            {% if attribute_groups %}
-            <div class="tab-pane" id="tab-specification">
-              <table class="table table-bordered">
-                {% for attribute_group in attribute_groups %}
-                <thead>
-                  <tr>
-                    <td colspan="2"><strong>{{ attribute_group.name }}</strong></td>
-                  </tr>
-                </thead>
-                <tbody>
-                {% for attribute in attribute_group.attribute %}
-                <tr>
-                  <td>{{ attribute.text }}</td>
-                </tr>
-                {% endfor %}
-                  </tbody>
-                {% endfor %}
-              </table>
-            </div>
-            {% endif %}
-       </div>
             <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-515eeaf54693130e"></script> 
             <!-- AddThis Button END --> 
            
             <div class="content_product_block d-none">{{ productblock }}</div>
-            {% if column_left and column_right %}
-         {% set class = 'col-sm-6' %}
-         {%  elseif column_left or column_right %}
-         {% set class = 'col-sm-12' %}
-         {% else %}
-         {% set class = 'col-sm-12' %}
-        {% endif %}
-    <div id="tabs_info" class="product-tab {{ class }}">
-          <ul class="nav nav-tabs">
-            <li class="active"><a href="#tab-description" data-toggle="tab">{{ tab_description }}</a></li>
             {% if attribute_groups %}
-            <li><a href="#tab-specification" class="d-none" data-toggle="tab">{{ tab_attribute }}</a></li>
-            {% endif %}
-            {% if review_status %}
-            <li><a href="#tab-review" data-toggle="tab">{{ tab_review }}</a></li>
-            {% endif %}
-          </ul>
-          <div class="tab-content">
-            <div class="tab-pane active" id="tab-description">{{ description }}</div>
-            {% if attribute_groups %}
-            <div class="tab-pane d-none" id="tab-specification">
+            <div class="tab-pane" id="tab-specification">
               <table class="table table-bordered">
                 {% for attribute_group in attribute_groups %}
                 <thead>
@@ -349,6 +306,20 @@
               </table>
             </div>
             {% endif %}
+           
+      </div>
+      <div id="tabs_info" class="product-tab {{ class }}">
+          <ul class="nav nav-tabs">
+            <li class="active"><a href="#tab-description" data-toggle="tab">{{ tab_description }}</a></li>
+            {% if attribute_groups %}
+            <li class="d-none"><a href="#tab-specification" data-toggle="tab">{{ tab_attribute }}</a></li>
+            {% endif %}
+            {% if review_status %}
+            <li><a href="#tab-review" data-toggle="tab">{{ tab_review }}</a></li>
+            {% endif %}
+          </ul>
+          <div class="tab-content">
+            <div class="tab-pane active" id="tab-description">{{ description }}</div>
             {% if review_status %}
             <div class="tab-pane" id="tab-review">
               <form class="form-horizontal" id="form-review">
@@ -396,8 +367,6 @@
             </div>
             {% endif %}</div>
       </div>
-           
-      </div>
      
             </div>
             <div class="col-sm-3 product d-none">
@@ -429,7 +398,7 @@
           <ul class="nav nav-tabs">
             <li class="active"><a href="#tab-description" data-toggle="tab">{{ tab_description }}</a></li>
             {% if attribute_groups %}
-            <li><a href="#tab-specification" data-toggle="tab">{{ tab_attribute }}</a></li>
+            <li class="d-none"><a href="#tab-specification" data-toggle="tab">{{ tab_attribute }}</a></li>
             {% endif %}
             {% if review_status %}
             <li><a href="#tab-review" data-toggle="tab">{{ tab_review }}</a></li>
@@ -437,27 +406,6 @@
           </ul>
           <div class="tab-content">
             <div class="tab-pane active" id="tab-description">{{ description }}</div>
-            {% if attribute_groups %}
-            <div class="tab-pane" id="tab-specification">
-              <table class="table table-bordered">
-                {% for attribute_group in attribute_groups %}
-                <thead>
-                  <tr>
-                    <td colspan="2"><strong>{{ attribute_group.name }}</strong></td>
-                  </tr>
-                </thead>
-                <tbody>
-                {% for attribute in attribute_group.attribute %}
-                <tr>
-                  <td>{{ attribute.name }}</td>
-                  <td>{{ attribute.text }}</td>
-                </tr>
-                {% endfor %}
-                  </tbody>
-                {% endfor %}
-              </table>
-            </div>
-            {% endif %}
             {% if review_status %}
             <div class="tab-pane" id="tab-review">
               <form class="form-horizontal" id="form-review">
