Product page design as per flipkart

--- a/system/storage/modification/catalog/view/theme/Demo-Store/template/product/product.twig
+++ b/system/storage/modification/catalog/view/theme/Demo-Store/template/product/product.twig
@@ -303,6 +303,12 @@
                 {% endfor %}
                   </tbody>
                 {% endfor %}
+                <tbody>
+                  <tr>
+                    <td>Delivery</td>
+                    <td>Super Fast delivery in 90 Mins</td>
+                  </tr>
+                </tbody>
               </table>
             </div>
             {% endif %}
