--- a/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
+++ b/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
@@ -8427,6 +8427,66 @@ div#information-contact h3, div#information-contact div.panel-group#accordion{
 .fa-cart-arrow-down:before{
 	content:none;
 }
-/* div#tab-specification .table.table-bordered thead, div#tab-specification .table.table-bordered tbody tr td:first-child {
-    display: none;
-} */
+div#tab-specification .table.table-bordered tbody tr td ul li{
+	list-style: circle;
+}
+
+.page-title h2, .category_thumb #tab-specification .table.table-bordered thead, .category_thumb #tab-specification .table.table-bordered tbody tr:first-child td:first-child, .product-detail-left #tab-specification .table.table-bordered thead, .product-detail-left #tab-specification .table.table-bordered tbody tr td h2{
+	display: none;
+}
+.category_thumb #tab-specification .table.table-bordered, .category_thumb #tab-specification .table.table-bordered tbody tr td, .product-detail-left #tab-specification .table.table-bordered, .product-detail-left #tab-specification .table.table-bordered tbody tr td{
+	border: none;
+}
+.category_thumb #tab-specification .table.table-bordered tbody tr td ul{
+	margin-left: -37px;
+	margin-bottom: 0;
+}
+.category_thumb #tab-specification .table.table-bordered tbody tr:first-child td:nth-child(2){
+	padding-top: 0;
+	padding-bottom: 0;
+	font-size: medium;
+}
+.product-detail-left #tab-specification .table.table-bordered tbody tr:first-child td:nth-child(2){
+	font-size: medium;
+}
+.product-detail-left #tab-specification .table.table-bordered tbody tr:first-child td:first-child{
+	font-size: large;
+	font-weight: 700;
+	padding-right: 0;
+	white-space: nowrap;
+}
+.product-detail-left .rating-wrapper, #content .product-detail-left ul.list-unstyled, .product-detail-left .table{
+	margin: 0;
+}
+.product-detail-left .product .form-group.qty{
+	padding: 5px 0;
+}
+.category_thumb .mt-15{
+	margin-top: 15px;
+}
+.product-detail-left #tab-specification .table.table-bordered tbody tr td ul{
+	margin-bottom: 0;
+}
+.w-100{
+	width: 100% !important;
+}
+.cat-delivery {
+    padding-top: 50px;
+    font-size: medium;
+    font-weight: 600;
+}
+@media (max-width: 568px){
+	.category_thumb #tab-specification{
+		display:none
+	}
+	.product-detail-left #tab-specification .table.table-bordered tbody tr td {
+		display: block;
+		padding: 0;
+	}
+	.product-detail-left #tab-specification .table.table-bordered tbody tr td:first-child {
+		padding-bottom: 5px;
+	}
+	.cat-delivery {
+		display: none;
+	}
+}
