--- a/catalog/view/theme/Demo-Store/template/product/category.twig
+++ b/catalog/view/theme/Demo-Store/template/product/category.twig
@@ -91,8 +91,9 @@
         {% for product in products %}
         <div class="product-layout product-list col-xs-12">
           <div class="product-block product-thumb">
-         <div class="product-block-inner">
-      <div class="image {% if product.qty == 0 %}outstock{% endif %}">
+         <div class="product-block-inner w-100">
+<div class="col-sm-2">
+      <div class="image {% if product.qty == 0 %}outstock{% endif %} mt-15">
         {% if product.thumb_swap %}
       <a href="{{ product.href }}">
         <button class="wishlist" type="button"  title="{{ button_wishlist }} " onclick="wishlist.add('{{ product.product_id }} ');"></button>
@@ -110,7 +111,9 @@
       <span class="stock_status">{{text_outstock}}</span>
     {% endif %}     
           </div>
-            <div class="product-details">
+</div>
+<div class="col-sm-6">
+            <div class="product-details w-100">
               <div class="caption">
                {# <span class="product-brand">{{product.brand}}</span>#}
                <h4><a href="{{ product.href }}">{{ product.name }}</a></h4> 
@@ -126,7 +129,7 @@
                    &nbsp;<span style="cursor:pointer;" value="{{ product.href }}" class="total-review{{ product.product_id }}">{{product.review}} Review</span>
                    </div>
                {% endif %}
-             <p class="description">{{ product.description }}</p>
+             <p class="description d-none">{{ product.description }}</p>
              {% if product.attribute_groups %}
             <div class="tab-pane" id="tab-specification">
               <table class="table table-bordered">
@@ -148,6 +151,10 @@
               </table>
             </div>
             {% endif %}
+</div>
+              </div>
+            </div>
+<div class="col-sm-4 mt-15">
 			 {% if product.price %}
               <p class="price">
                 {% if not product.special %}
@@ -171,9 +178,9 @@
           <button class="wishlist" type="button"  title="{{ button_wishlist }} " onclick="wishlist.add('{{ product.product_id }} ');"></button>
 					<button class="compare_button" type="button"  title="{{ button_compare }} " onclick="compare.add('{{ product.product_id }} ');"></button>
                    </div>
-		      </div>
-              </div>
-            </div>
+		      <div class="cat-delivery">Super Fast delivery in 90 Mins</div>
+          </div>
+</div>
       </div>
           </div>
         </div>
