--- a/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
+++ b/catalog/view/theme/Demo-Store/stylesheet/stylesheet.css
@@ -8441,10 +8441,13 @@ div#tab-specification .table.table-bordered tbody tr td ul li{
 	margin-left: -37px;
 	margin-bottom: 0;
 }
+.category_thumb #tab-specification .table.table-bordered{
+	margin-bottom: 0;
+}
 .category_thumb #tab-specification .table.table-bordered tbody tr:first-child td:nth-child(2){
 	padding-top: 0;
 	padding-bottom: 0;
-	font-size: medium;
+	font-size: 13px;
 }
 .product-detail-left #tab-specification .table.table-bordered tbody tr:first-child td:nth-child(2){
 	font-size: medium;
@@ -8461,7 +8464,7 @@ div#tab-specification .table.table-bordered tbody tr td ul li{
 .product-detail-left .product .form-group.qty{
 	padding: 5px 0;
 }
-.category_thumb .mt-15{
+.category_thumb .product-list .mt-15{
 	margin-top: 15px;
 }
 .product-detail-left #tab-specification .table.table-bordered tbody tr td ul{
@@ -8474,6 +8477,12 @@ div#tab-specification .table.table-bordered tbody tr td ul li{
     padding-top: 50px;
     font-size: medium;
     font-weight: 600;
+}
+.category_thumb .product-grid .col-sm-2, .category_thumb .product-grid .col-sm-6, .category_thumb .product-grid .col-sm-4{
+	width: 100%;
+}
+.category_thumb .product-grid #tab-specification, .category_thumb .product-grid .cat-delivery{
+	display: none;
 }
 @media (max-width: 568px){
 	.category_thumb #tab-specification{
