--- a/catalog/view/theme/Demo-Store/template/common/header.twig
+++ b/catalog/view/theme/Demo-Store/template/common/header.twig
@@ -113,7 +113,7 @@ jQuery(window).resize(function() {quickbox();});
           {% endif %}
         </div>
       </div>
-      <div class="col-sm-4 pr-0">{{ headerleft }} </div>  
+      <div class="col-sm-3 pr-0">{{ headerleft }} </div>  
     
     <!-- <div id="_desktop_contact_link"></div> -->
 
@@ -164,6 +164,30 @@ jQuery(window).resize(function() {quickbox();});
   </div>
 </div>
 </header>
+<div class="fixed-footer">
+<div class="row">
+  <div class="f-home col-xs-3">     
+    <div>
+      <a href="{{ home }}"><i class="fa fa-home"></i></a>
+    </div>
+  </div>
+  <div class="f-cart col-xs-3">     
+    <div>
+      <a href="{{ home }}"><i class="fa fa-shopping-cart"></i></a>
+    </div>
+  </div>
+  <div class="f-order col-xs-3">     
+    <div>
+      <a href="{{ account }}"><i class="fa fa-user"></i></a>
+    </div>
+  </div>
+  <div class="f-account col-xs-3">     
+    <div class="header_center">
+			{{ menu }}
+		</div>
+  </div>
+</div>
+</div>
 <div class="content-top-breadcum">
 <div class="container">
 </div>
