--- a/catalog/view/theme/Demo-Store/template/common/menu.twig
+++ b/catalog/view/theme/Demo-Store/template/common/menu.twig
@@ -3,9 +3,10 @@
 <!-- ======= Menu Code START ========= -->
 {% if categories %}
 <!-- Opencart 3 level Category Menu-->
+<header>
 <div id="menu" class="main-menu">
 <div id="res-menu" class="main-menu nav-container1 responsive-menu">
-<div class="nav-responsive"><span>Menu</span> </div>
+<div class="nav-responsive"><i class="fa fa-bars"></i></div>
  
  
 	<ul class="main-navigation"><div class="menu expandable"><span>Menu</span></div>
@@ -83,6 +84,7 @@
   
 </div>
 {% endif %}
+</header>
 </div>
 </nav>   
 
