--- a/catalog/view/theme/Demo-Store/template/common/home.twig
+++ b/catalog/view/theme/Demo-Store/template/common/home.twig
@@ -55,7 +55,7 @@
                                     <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="submit" class="btn btn-primary otp_login" value="Login" /> 
+                                    <input type="button" class="btn btn-primary otp_login" value="Login" /> 
                                 </div>
                             </div>
                                 
@@ -87,8 +87,8 @@ $(document).ready(function(){
                     dataType: 'json',
                     data:{mobile_no:mobile_no},
                     success: function(data){
-                        // console.log(data['success']);
-                        if(data['success']==='success'){
+                        console.log(data['status']);
+                        if(data['status']==='success'){
                              $('#modalLoginForm').modal('hide');
                              $('#modalLoginOtp').modal('show');
                             $('.otp_login').click(()=>{
@@ -98,11 +98,57 @@ $(document).ready(function(){
                                     url: "index.php?route=account/login/custom_login",
                                     dataType: 'json',
                                     data:{mobile_no:mobile_no,user_otp:user_otp},
-                                    success: function(data){
-                                        
+                                    success: function(login_data){
+                                        console.log(login_data);
+                                        if(login_data['login_status']==='success'){
+                                             Swal.fire({
+                                                    title: 'Login Success',
+                                                    text: "Login Verified Successfully",
+                                                    icon: 'success',
+                                                    // showCancelButton: true,
+                                                    confirmButtonColor: '#3085d6',
+                                                    cancelButtonColor: '#d33',
+                                                    // confirmButtonText: 'Yes, delete it!'
+                                                }).then((result) => {
+                                                    if (result.isConfirmed) {
+                                                        location.reload();
+                                                    }
+                                                });
+                                        }
+                                        else{
+                                             Swal.fire({
+                                                    title: 'Login Failed',
+                                                    text: "One Time Password is Wrong",
+                                                    icon: 'error',
+                                                    // showCancelButton: true,
+                                                    confirmButtonColor: '#3085d6',
+                                                    cancelButtonColor: '#d33',
+                                                    // confirmButtonText: 'Yes, delete it!'
+                                                }).then((result) => {
+                                                    if (result.isConfirmed) {
+                                                        location.reload();
+                                                    }
+                                                });
+                                        }
                                     }
                                 });
                             })
+                        }
+                        else
+                        {
+                             Swal.fire({
+                                title: 'Invalid Number?',
+                                text: "Mobile Number Not Found Please Check It",
+                                icon: 'warning',
+                                // showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                // confirmButtonText: 'Yes, delete it!'
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    location.reload();
+                                }
+                            });
                         }
                     }
                 });
@@ -136,3 +182,6 @@ $(document).ready(function(){
         });
     });	
 </script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.10/sweetalert2.css" rel="stylesheet" type="text/css"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.10/sweetalert2.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.10/sweetalert2.js"></script>
