--- a/catalog/view/theme/Demo-Store/template/common/home.twig
+++ b/catalog/view/theme/Demo-Store/template/common/home.twig
@@ -14,11 +14,11 @@
              {% if login_check %}
 
              {% else %}
-                <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
+                <div class="modal fade loginotp" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                             <div class="modal-header text-center">
-                                <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+                                <h4 class="modal-title w-100 font-weight-bold">Login</h4>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
     
@@ -31,18 +31,19 @@
                                     <input type="text" name="email" value="" placeholder="" id="input-email" class="form-control user_account_mobile" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="button" class="btn btn-primary get_otp" value="Get Otp" /> 
+                                    <input type="button" class="btn btn-primary get_otp send-otp" value="Send OTP" /> 
+                                    <input type="button" class="btn btn-primary" value="Skip Login" data-dismiss="modal" aria-label="Close" /> 
                                 </div>
                             </div>
                             </form>
                         </div>
                     </div>
                  </div>
-                 <div class="modal fade" id="modalLoginOtp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                 <div class="modal fade loginotp" id="modalLoginOtp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header text-center">
-                                <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+                                <h4 class="modal-title w-100 font-weight-bold">Login</h4>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
     
@@ -51,11 +52,12 @@
                             <form action="{{ action }}" method="post" enctype="multipart/form-data">
                             <div class="modal-body mx-3">
                                 <div class="form-group">
-                                    <label class="control-label" for="input-password">Otp</label>
+                                    <label class="control-label" for="input-password">Enter OTP</label>
                                     <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="button" class="btn btn-primary otp_login" value="Login" /> 
+                                    <input type="button" class="btn btn-primary otp_login" value="Resend OTP" /> 
+                                    <input type="button" class="btn btn-primary verify-otp" value="Verify OTP" /> 
                                 </div>
                             </div>
                                 
