--- a/catalog/view/theme/Demo-Store/template/common/home.twig
+++ b/catalog/view/theme/Demo-Store/template/common/home.twig
@@ -56,8 +56,8 @@
                                     <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" />
                                 </div>
                                 <div class="form-group">
-                                    <input type="button" class="btn btn-primary otp_login" value="Resend OTP" /> 
-                                    <input type="button" class="btn btn-primary verify-otp" value="Verify OTP" /> 
+                                    <input type="button" class="btn btn-primary resend_otp" value="Resend OTP" /> 
+                                    <input type="button" class="btn btn-primary otp_login" value="Verify OTP" /> 
                                 </div>
                             </div>
                                 
